--- a/src/article.njk
+++ b/src/article.njk
@@ -23,6 +23,7 @@ parmalink: 'goods/{{ product.items[0].url | slugify }}/'
 {{ product.name | log }}
 
 
+<div id="res_flex">
 <div id="article_flex">
 
 <div class="article_image">
@@ -64,9 +65,10 @@ width="330" height="330" alt="拡大写真" name="ph01"></td>
 ・お取り寄せは最長3週間かけて手配を行いますが、入荷見込みがない場合は該当商品の手配を中止し、ご用意ができた商品のみ出荷させていただきます。<br> 
 ・注文決定後、組合員様ご都合によるキャンセル・返品・受取方法の変更は出来かねますので予めご了承ください。</small>
  </div>
- </div>
-	{# {% endfor %} #}
+ {# </div> #}
+	
 
+</div>
 </div>
 </main>
 <footer>
