--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,7 +32,9 @@ h2{
 ul{
     display:flex;
     flex-wrap:wrap;
-    text-align:center;
+   text-align:center;
+    justify-content:center;
+    padding-left: 0;
 }
 
 
@@ -44,12 +46,15 @@ li{
 @media screen and (max-width:480px) { 
     ul{
         display:block;
-        padding:0;
+        padding:20px;
+        text-align:left;
+        
     }
     li{
         margin-left:25px;
     }
-    #article_flex{
+    #res_flex{
+        display:flex;
         flex-direction:column;
     }
 }
@@ -66,9 +71,16 @@ li{
    width:50%;
 }
 
+
+.btn{
+    text-align:center;
+}
+
+@media screen and (min-width:480px) { 
 #article_flex{
     display:flex;
     align-items:center;
     justify-content: space-between;
     padding-bottom: 100px;
+}
 }
