--- a/src/index.njk
+++ b/src/index.njk
@@ -1,9 +1,10 @@
 ---
 title: 爆音倶楽部
 layout: layout.njk
+cssPath: css/
 ---
 <head>
-    <link rel="stylesheet" href="./css/style.css">
+   
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol:wght@700&family=Kaisei+Opti:wght@400;500;700&family=Reggae+One&family=Roboto+Condensed:ital,wght@1,300&family=Stick&display=swap" rel="stylesheet">
