--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,21 +43,7 @@ li{
     margin-bottom: 50px;
 }
 
-@media screen and (max-width:480px) { 
-    ul{
-        display:block;
-        padding:20px;
-        text-align:left;
-        
-    }
-    li{
-        margin-left:25px;
-    }
-    #res_flex{
-        display:flex;
-        flex-direction:column;
-    }
-}
+
 
 #article_flex{
     padding-bottom: 100px;
@@ -76,11 +62,45 @@ li{
     text-align:center;
 }
 
-@media screen and (min-width:480px) { 
+@media (min-width:480px) { 
 #article_flex{
     display:flex;
     align-items:center;
     justify-content: space-between;
     padding-bottom: 100px;
 }
+#dekai{
+    width:330px;
+    height:330px;
+}
+#dekakunai{
+    width:100px;
+    height:100px;
+}
+}
+@media (max-width:480px) { 
+    ul{
+        display:block;
+        /* padding:10px; */
+        text-align:left;
+        
+    }
+    li{
+        margin-left:25px;
+    }
+    #article_flex{
+        display:block;
+        flex-direction:column;
+    }
+    .article_text{
+        width:100%;
+     }
+     #dekai{
+        width:200px;
+        height:200px;
+    }
+    #dekakunai{
+        width:50px;
+        height:50px;
+    }
 }
