--- a/src/article.njk
+++ b/src/article.njk
@@ -59,7 +59,7 @@ alt="写真3" border="0"></a><br></td>
         <h2>{{ product.name }}</h2>
         <p class="price">{{ product.price }}</p>
         <p>説明：{{ product.text }}</p>
-        <p>品番：{{ product.state }}</p>
+        <p>品番：{{ product.num }}</p>
         <p>数量：<input type="number" name="num"></p>
         <a class="btn" href="#">カートに入れる</a><br>
         <br>
