--- a/src/index.njk
+++ b/src/index.njk
@@ -2,6 +2,7 @@
 title: 爆音倶楽部
 layout: layout.njk
 cssPath: css/
+scriptPath: js/
 ---
 <head>
    
@@ -35,6 +36,7 @@ cssPath: css/
 <footer>
 <small>© 2022 BAKUON CLUB</small>
 </footer>
+<script src="{{ script.Pass }}script.js"></script>
 </body>
 <script>
     {{ product in goods[9] }}
