--- a/src/index.njk
+++ b/src/index.njk
@@ -23,7 +23,7 @@ scriptPath: js/
 {% for product in goods %}
 
 	<li class="list">
-        <a href="https://momokaaa.parasite.jp/ecsite2022//article/{{ product.url }}">
+        <a href="https://momokaaa.parasite.jp/_site//article/{{ product.url }}">
         <img src="./images/{{ product.itemphotos[0] }}">
         <p>{{ product.name }}</p>
         <p>{{ product.price }}</p>
