--- a/src/article.njk
+++ b/src/article.njk
@@ -20,7 +20,7 @@ cssPath: ../../css/
 
 <header>
     <h1>爆音倶楽部</h1>
-    <a href="https://momokaaa.parasite.jp/ecsite2022/">home</a>
+    <a href="https://momokaaa.parasite.jp/_site/">home</a>
     <a href="">about</a>
 </header>
 <main>
