--- a/src/index.njk
+++ b/src/index.njk
@@ -24,7 +24,7 @@ scriptPath: js/
 
 	<li class="list">
         <a href="https://momokaaa.parasite.jp/_site//article/{{ product.url }}">
-        <img src="./images/{{ product.itemphotos[0] }}">
+        <img class="mainimg" src="./images/{{ product.itemphotos[0] }}">
         <p>{{ product.name }}</p>
         <p>{{ product.price }}</p>
         <p class="state">{{ product.state }}</p>
