--- a/src/article.njk
+++ b/src/article.njk
@@ -19,7 +19,7 @@ cssPath: ../../css/
 <body>
 
 <header>
-    <h1>爆音倶楽部</h1>
+    <a href="https://momokaaa.parasite.jp/_site/"><h1>爆音倶楽部</h1></a>
     <a href="https://momokaaa.parasite.jp/_site/">home</a>
     <a href="">about</a>
 </header>
