--- a/src/index.njk
+++ b/src/index.njk
@@ -12,7 +12,7 @@ scriptPath: js/
 </head>
 <body>
 <header>
-    <h1>{{ title }}</h1>
+    <h1 class="h1_m">{{ title }}</h1>
     <a href="">home</a>
     <a href="">about</a>
 </header>
